[gd_scene load_steps=10 format=3 uid="uid://cbq60l25xsim8"]

[ext_resource type="Script" path="res://enemies/greater_green/greater_green.gd" id="1_qy1rr"]
[ext_resource type="AudioStream" uid="uid://qajtv1gyj6ym" path="res://audio/parriedsfx.wav" id="2_wljy7"]
[ext_resource type="AudioStream" uid="uid://e7g5lfly8s3g" path="res://audio/bulletsfx.wav" id="3_g5rky"]
[ext_resource type="AudioStream" uid="uid://bnc1iuu0qrp6h" path="res://audio/alt_bullet_dodge_sfx.wav" id="3_no1lm"]

[sub_resource type="Curve" id="Curve_7dnht"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_2sago"]
offsets = PackedFloat32Array(0, 0.5, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.705882, 1, 1, 1, 0)
metadata/_snap_enabled = true
metadata/_snap_count = 20

[sub_resource type="CircleShape2D" id="CircleShape2D_6vgil"]
radius = 145.344

[sub_resource type="CircleShape2D" id="CircleShape2D_p147o"]
radius = 142.004

[sub_resource type="CircleShape2D" id="CircleShape2D_uedyc"]
radius = 400.0

[node name="greater_green" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_qy1rr")

[node name="body" type="CPUParticles2D" parent="."]
amount = 150
local_coords = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 400.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
orbit_velocity_min = 1.0
orbit_velocity_max = 1.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 25.0
scale_amount_max = 25.0
scale_amount_curve = SubResource("Curve_7dnht")
color = Color(0, 1, 0, 1)
color_ramp = SubResource("Gradient_2sago")

[node name="eye" type="CPUParticles2D" parent="."]
modulate = Color(1, 3, 1, 1)
local_coords = true
gravity = Vector2(0, 0)
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 20.0
scale_amount_max = 20.0

[node name="BlastTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="wall_hitbox" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_6vgil")

[node name="blastsfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_wljy7")
volume_db = -10.0
pitch_scale = 0.6
max_distance = 8000.0

[node name="bulletsfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g5rky")
volume_db = 3.0
pitch_scale = 0.7
max_distance = 8000.0

[node name="bulletsfx2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_wljy7")
volume_db = -10.0
pitch_scale = 0.8
max_distance = 8000.0

[node name="lasersfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_no1lm")
volume_db = -7.0
max_distance = 8000.0

[node name="playerdeath" type="Area2D" parent="." groups=["enemy", "enemy_body"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerdeath"]
shape = SubResource("CircleShape2D_p147o")

[node name="blast_area" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="blast_area"]
shape = SubResource("CircleShape2D_uedyc")

[node name="Node2D" type="Node2D" parent="."]

[connection signal="timeout" from="BlastTimer" to="." method="_on_blast_timer_timeout"]
[connection signal="area_entered" from="playerdeath" to="." method="_on_playerdeath_area_entered"]
[connection signal="area_entered" from="blast_area" to="." method="_on_blast_area_area_entered"]
[connection signal="area_exited" from="blast_area" to="." method="_on_blast_area_area_exited"]
